c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/extra_credit/union_struct_conflicts/tag_decl_conflicts_with_def.c
/* You can't declare 'struct s' and define 'union s' or vice versa in same scope
 * (This test is intended to verify that we detect conflicts between declarations
 * and definitions rather than just ignoring the declarations/letting the
 * definitions overwrite them)
 * */

int main(void) {
    struct s;
    union s { // conflicts w/ earlier declaration
        int a;
    };

    return 0;
}